--- a/app/assets/stylesheets/mcds.scss
+++ b/app/assets/stylesheets/mcds.scss
@@ -20,7 +20,25 @@
     justify-content: center;
     margin-top: 20px;
   }
+.mcd2{
+  padding-left: 50px;
+}
 
+.top{text-align: center;
+margin-top: 100px;}
+    
+.top2{text-align: center;
+margin-top: 100px;
+margin-bottom: 100px;}
+
+.field{text-align: center;}
+
+.field1{text-align: center;
+margin: 30px;}
+
+.form-group{margin-left: 47%;}
+
+.field2{text-align: center;}
 
 
 
